  [Bug Fix]
    * Fix bugs that the following classes are not compiled in compilation time.
    
      Sys::OS
      Sys::Env
      Sys::Select::Constant
      Sys::Poll::Constant
      Sys::IO::Stat
  [Exception Changes]
    * Sys::Process#waitpid method throws an exception if $wstatus_ref is not defined.
    * Sys::Process#wait method throws an exception if $wstatus_ref is not defined.
    
0.529001 2025-01-05
  [Changes]
    * Sys#rand method calls Fn#rand method.
0.529 2025-01-05
  [Requirement Changes]
    * Require SPVM 0.990035.
  [New Features]
    * Add Sys#rand method.
    * Add Sys#srand method.
  [Changes]
    * $mode argument of Sys#mkdir method is optional.
    
0.528 2024-10-17
  [New Features]
    * Add Sys::Socket::Errno#is_read_again method.
    * Add Sys::Socket::Errno#is_write_again method.
    * Add Sys::Socket::Errno#is_connect_again method.
    * Add Sys::Socket::Errno#is_accept_again method.
    
  [Cleanup]
    * Improve docs, argument names, variable names of Sys#accept method and Sys::Socket#accept method.
    

0.527 2024-10-11
  [New Features]
    * Add host option to Test::SPVM::Sys::Socket::ServerManager class.
    * Add can_bind function to Test::SPVM::Sys::Socket::Util module.
  [Test Improvement]
    * Add IPv6 tests.
  
0.526001 2024-10-09
  [Changes]
    * Remove unused Sys.config
    
0.526 2024-06-14
  [Document Improvement]
    * Improve docs for Sys::Socket::Constant class.
  [Test Improvement]
    * Restore a test for Sys::Socket#accept method in Windows.
    * Restore a test for Sys::Socket::Sockaddr::Un class in Windows.
    
0.525 2024-06-14
  [Requirement Changes]
    * Does not upgrade IO::Socket::IP.

0.524 2024-06-13
  [Requirement Changes]
    * Require IO::Socket::IP 0.42.
    * Require Perl v5.20.3.
  [New Features]
    * Add Test::SPVM::Sys::Socket module.
    * Add Test::SPVM::Sys::Socket::Server module.
    * Add Test::SPVM::Sys::Socket::ServerManager module.