@@ -34,11 +34,19 @@ C<static method localtime : L<Sys::Time::Tm|SPVM::Sys::Time::Tm> ($time_ref : lo
 
 Calls the L<localtime|https://linux.die.net/man/3/localtime> function and creates a L<Sys::Time::Tm|SPVM::Sys::Time::Tm> object given its return value, and returns it.
 
+Exceptions:
+
+The reference of the time $time must be defined. Otherwise an exception is thrown.
+
 =head2 gmtime
 
 C<static method gmtime : L<Sys::Time::Tm|SPVM::Sys::Time::Tm> ($time_ref : long*);>
 
 Calls the L<gmtime|https://linux.die.net/man/3/gmtime> function and creates a L<Sys::Time::Tm|SPVM::Sys::Time::Tm> object given its return value, and returns it.
+
+Exceptions:
+
+The reference of the time $time must be defined. Otherwise an exception is thrown.
 
 =head2 gettimeofday
 
